# pwndora-1

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  TODO.md  docker-compose.yml  env  env.example  mistrel_keys.md  package.json  patch_routes.py  pyproject.toml  test_nginx_e2e.py  vercel.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend.yml  ci.yml  frontend.yml  lint.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  init_db.py  railway.json  requirements.txt
backend/ai/: demo_data.py  gemini_client.py  service.py
backend/alembic/: env.py
backend/app/: main.py
backend/config/: settings.py
backend/core/: cache.py  config.py  errors.py  logging_config.py  middleware.py
backend/database/: session.py
backend/knowledge/: loader.py  opportunities.json  resources.py
backend/models/: sqlalchemy_models.py
backend/orchestrators/: career_orchestrator.py
backend/repositories/: opportunity_repositories.py  repositories.py
backend/schemas/: github_evidence.py  (+4 more)
docs/: API.md
frontend/: .dockerignore  Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vercel.json  vitest.config.ts
knowledge/: README.md
nginx/: Dockerfile  entrypoint.sh  nginx.conf
scripts/: README.md  generate_docs.py  reset_db.py  seed_db.py  validate_knowledge.py
(+247 files in other folders)
