[project]
name = "cyberpath-ai-backend"
version = "0.1.0"
description = "CyberPath AI backend service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "python-multipart>=0.0.12",
    "pydantic>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pdfminer.six>=20221105",
    "python-docx>=1.1",
    "nest-asyncio>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "httpx>=0.27",
    "types-psycopg2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pyrefly]
project_includes = ["backend"]
search_path = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
extraPaths = ["backend"]
